# cog

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  STYLEGUIDE.md
docs/workflows/: ralph.md  refine.md
scripts/: preview_run_panels.py
src/cog/: __init__.py  checks.py  cli.py  diagnostics.py  git.py  headless.py  loop.py  preflight.py  state.py  state_paths.py  telemetry.py
tests/: conftest.py  fakes.py  test_cli.py  test_dummy_workflow.py  test_errors.py  test_git.py  test_loop.py  test_stage_executor.py  test_state_paths.py  test_telemetry.py  test_telemetry_record.py  test_workflow_base.py  test_workflow_lifecycle.py
tests/git/: conftest.py  test_worktree.py
tests/test_core/: test_filter.py  test_runner_events.py
tests/test_headless/: test_run_headless.py  test_run_headless_loop.py  test_stderr_sink.py
tests/test_hosts/: conftest.py  test_github_checks.py  test_github_create_pr.py  test_github_get_pr_body.py  test_github_get_pr_for_branch.py  test_github_host_errors.py  test_github_mentioning_item.py  test_github_push.py  test_github_update_pr.py
tests/test_preflight/: test_format_results.py  test_run_checks.py
tests/test_runners/: helpers.py  test_agent_runner_run_default.py  test_claude_cli_errors.py  test_claude_cli_events.py  test_claude_cli_inactivity.py  test_claude_cli_line_limit.py  test_claude_cli_result.py  test_claude_cli_sandbox.py  test_claude_cli_stderr_drain.py  test_claude_cli_timeout.py  test_claude_cli_tool_aware_stall.py
tests/test_ui/: conftest.py  (+26 more)
(+132 files in other folders)
