[project]
name = "cog"
version = "0.1.0"
description = "TUI for managing the refine → ralph workflow across GitHub issues"
license = "MIT"
requires-python = ">=3.12"
authors = [{name = "Jessie Puls", email = "jessiepuls@gmail.com"}]
dependencies = ["typer"]

[project.scripts]
cog = "cog.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cog"]

[dependency-groups]
dev = ["pytest", "pytest-asyncio", "ruff", "mypy"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = false
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra --strict-markers --strict-config"
asyncio_mode = "auto"
filterwarnings = ["error"]
